--- a/soon.css
+++ b/soon.css
@@ -105,6 +105,7 @@ h1 {
   width: 100%;
   display: flex;
   flex-direction: column;
+  justify-content: center;
   align-items: center;
   font-size: 1.6em;
   height: 100vh;
